# weblingbrowser

./: BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  DBContext.cpp  DBContext.h  FontSettings.cpp  FontSettings.h  README.md  Settings.cpp  Settings.h  UrlDropDown.cpp  UrlDropDown.h  Webling.cpp  Webling.h  main.cpp
res/: introspection.xml  resources.gresource.xml  settings.gschema.xml  style.css
